doc/static-files/css/sdk-docs.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

html, body {
  min-width: 510px;         /* 2 x sidebar fullwidth + main-content padding */
  height: 100%;
}

pre {
  color: black;
  background-color: whitesmoke;
  padding: 10px;
  overflow: auto;
}

h1 {
  color: black;
}

h2 {
  color: black;
  overflow:auto;
  font-style: normal;
  padding: 5px 0px;
}

h2.top {
  margin-top: 0px;
}

#columns {
  padding-left: 220px;      /* sidebar width + sidebar padding */
  padding-right: 25px;     /* main-content padding*/
  padding-top: 20px;
  min-height: 100%;
  margin-bottom: 170px;
  position: relative;
}

hr {
  border-style: solid;
  border-bottom-width: 1px;
  color: #a0d0fb;
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  margin-top: 1em;
  margin-bottom: 1em;
}

.funnel .menu {
  padding-right: 25px;     /* main-content padding*/
}

#mozilla-tab {
  padding-right: 25px;     /* main-content padding*/
}

#site-header h1 a span {
  top: 25px;
  left: 25px;
}

#site-header {
  padding-left: 25px;
}

#columns .column {
  position: relative;
  float: left;
}

#main-content-column {
  width: 100%;
  padding-right: 25px;
}

.check, .cross {
 text-align: center;
}

#sidebar {
  width: 170px;        /* sidebar usable width (fullwidth - padding) */
  right: 275px;        /* sidebar fullwidth + main-content padding */
  padding-left: 55px;
  padding-right: 25px;
  margin-left: -100%;
}

.api_reference h3, .api_reference  h4,
.api_reference  h5, .api_reference  h6 {
  overflow: auto;
 }

#toc {
  width: 180px;
  float: right;
  font-size: 0.9em;
  overflow: hidden;
  margin-top: 0;
  margin-left: 25px;
  margin-bottom: 1em;
}

#toc a {
  font-family: Georgia, serif;
  font-weight: normal;
  font-style: italic;
}

.title {
  height: 30px;
  margin-bottom: 10px;
}

.sidebar-section, #toc {
  border-style: solid;
  border-color: #a0d0fb;
  border-width: 1px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  -khtml-border-radius: 5px;
  border-radius: 5px;
  background: #F0F8FF;
  margin-bottom: 1.0em;
}

.aside {
  color: gray;
  float: right;
  padding-left: 1em;
  margin-left: 1em;
  margin-right: 0;
  width: 25%;
  border-left: 1px solid gray;
}

#toc a {
  display: block;
  }

#toc a[class = H2] {
  font-size: 1.1em;
  font-weight: bold;
  margin-left: 0.5em;
}

#toc a[class = H3] {
  margin-left: 0.5em;
  font-weight: bold;
}

#toc a[class = H4] {
  margin-left: 1.5em;
  font-family: "andale mono", monospace;
  font-style: normal;
}

#toc a[class = H5] {
  margin-left: 2.5em;
  font-weight: bold;
}

#toc a[class = H6] {
  margin-left: 3em;
  font-family: "andale mono", monospace;
  font-style: normal;
}

.warning {
  margin-left: auto;
  margin-right: auto;
  margin-top: 2em;
  margin-bottom: 2em;
  display: block;
  padding: 1em;
  border: solid 2px black;
  width: 75%;
  background-color: #FBEDED;
  border: 1px solid #AC6262;
}

.logo {
  margin-left: 5px;
  float: left;
}

.meta-header {
  font-weight: bold;
}

.sidebar-section .modules {
  padding-left: 25px;
}

.package-entry .modules
.package-detail .modules {
  margin: 0em;
  padding-left: 0;
}

.module {
  margin-top: 0.2em;
  margin-bottom: 0.2em;
  padding-left: 0em;
  padding-right: 0em;
  margin-right: 1.0em;
}

.package-detail .authors, .package-detail .dependencies,
.package-detail .version, .package-detail .license {
  font-family: Monaco, Lucida Console, monospace;
  font-size: 0.8em;
  white-space: pre;
}

#main-content h1 {
  font-size: 2.2em;
}

#main-content h2 {
  font-size: 1.7em;
  color: black;
}

.image-center {
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.image-right {
  margin-left: 1.0em;
  float:right;
}

div.buttonarray {
  -moz-column-count: 3;
  -moz-column-width: 33%;
  -moz-column-gap: 2em;
}

div.columns {
  -moz-column-count: 3;
  -moz-column-width: 33%;
  -moz-column-gap: 2em;
}

.experimental {
  background-color: #FFFAAE;
  color: black;
  padding: 1px 10px;
}

div.buttonarray a {
  padding: 3px;
  display: block;
  text-decoration:none;
}

div.buttonarray p {
  margin-bottom: 0px;
}

div.buttonarray a:hover {
  background-color: #F0F8FF;
  padding: 2px;
  border: solid 1px;
  border-color: #a0d0fb;
}

.sidebar-section h2 {
  padding-left: 10px;
  background-color: #3b69b1;
  font-family: Georgia, serif;
  font-style: italic;
  font-size: 1.4em;
  color: white;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  -webkit-border-radius-topleft: 5px;
  -webkit-border-radius-topright: 5px;
  -khtml-border-radius-topleft: 5px;
  -khtml-border-radius-topright: 5px;
  border-radius-topleft: 5px;
  border-radius-topright: 5px;
}

.sidebar-section h3 {
  padding-left: 5px;
  font-family: Georgia, serif;
  font-style: italic;
  font-size: 1.2em;
  color: #003595;
}

.sidebar-section h2, .sidebar-section h3 {
  padding-top: 5px;
  padding-bottom: 5px;
  margin: 0px;
}

.sidebar-section a h2:hover {
  color: #003595;
  background: white;
  text-decoration: none;
}

.sidebar-section a h3:hover {
  background: white;
  text-decoration: none;
}

.sidebar-section a:hover {
  text-decoration: none;
}

.sidebar-subsection-contents {
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
}

#sidebar li {
  border-style: solid;
  border-top-width: 1px;
  border-color: #a0d0fb;
  margin-left: 0em;
}

#sidebar ul li:first-child {  
   border-top: none;  
}

#sidebar li {
  list-style-type: none;
  margin-left: 0em;
}
.sidebar-subsection-contents ul{
  margin-bottom: 0em;
}

.sidebar-subsection-contents a {
  display: block;
  text-decoration: none;
  padding: 1px 15px;
}

.modules a {
  display: block;
}

.sidebar-subsection-contents a:hover {
  background-color: white;
  border-color: #a0d0fb;
  border: solid 1px;
  padding: 0px 14px;
  border-color: #a0d0fb;
}


.sidebar-subsection-contents h4 a {
  font-weight: normal;
  padding: 1px 5px;
}

.sidebar-subsection-contents h4 a:hover {
  font-weight: normal;
  padding: 0px 4px;
}

#third-party-packages-subsection {
  display: none;
}


table.catalog, table.catalog tr, table.catalog td {
  border: none;
}

table.catalog td {
  padding: 1em;
}

